# feedforge

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: items.json
src/: build.rs  date.rs  escape.rs  lib.rs  main.rs  merge.rs  model.rs  parse.rs  validate.rs
tests/: integration.rs
