[package]
name = "feedforge"
version = "0.1.0"
edition = "2021"
authors = ["Cognis Digital"]
description = "RSS/Atom feed builder, validator, and merger for monitoring stacks."
license = "LicenseRef-COCL-1.0"
repository = "https://github.com/cognis-digital/feedforge"
readme = "README.md"
keywords = ["rss", "atom", "feed", "osint", "monitoring"]
categories = ["command-line-utilities", "parsing"]

[[bin]]
name = "feedforge"
path = "src/main.rs"

[lib]
name = "feedforge"
path = "src/lib.rs"

[dependencies]
quick-xml = "0.36.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
opt-level = 3
lto = true
